0029491: Visualization, AIS_Shape - filter unsupported Display Modes within ::AcceptDisplayMode()

AIS_Shape::AcceptDisplayMode() now accepts only modes 0,1 and 2.
AIS_ColoredShape::Compute() no more computes presentation for unknown display mode.